--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource-variable/jetbrains-mono": "^5.0.19",
+		"@fontsource-variable/manrope": "^5.0.18"
+	}
 }
