--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,13 @@ jobs:
           BASE_PATH: ''
         run: |
           npm run build
+          touch build/.nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v1
         with:
           # this should match the `pages` option in your adapter-static options
-          path: 'build/'
+          path: '.svelte-kit/output/'
 
   deploy:
     needs: build_site
