--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,13 +24,13 @@ jobs:
         env:
           BASE_PATH: ''
         run: |
-          npm run build
+          npm run build && npm run preview
 
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v1
-        with:
-          # this should match the `pages` option in your adapter-static options
-          path: '.svelte-kit/output/prerendered/pages'
+      # - name: Upload Artifacts
+      #   uses: actions/upload-pages-artifact@v1
+      #   with:
+      #     # this should match the `pages` option in your adapter-static options
+      #     path: '.svelte-kit/output/prerendered/pages'
 
   deploy:
     needs: build_site
