--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         env:
           BASE_PATH: ''
         run: |
-          npm run build && npm run preview
+          npm run build
 
       # - name: Upload Artifacts
       #   uses: actions/upload-pages-artifact@v1
