--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,11 +26,11 @@ jobs:
         run: |
           npm run build
 
-      # - name: Upload Artifacts
-      #   uses: actions/upload-pages-artifact@v1
-      #   with:
-      #     # this should match the `pages` option in your adapter-static options
-      #     path: '.svelte-kit/output/prerendered/pages'
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v1
+        with:
+          # this should match the `pages` option in your adapter-static options
+          path: '.svelte-kit/'
 
   deploy:
     needs: build_site
@@ -47,4 +47,4 @@ jobs:
     steps:
       - name: Deploy
         id: deployment
-        run: npm run preview
+        uses: actions/deploy-pages@v1
