--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,23 +14,18 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: 18
           cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: build
+      - name: Build
         env:
           BASE_PATH: ''
         run: |
-          npm run build
+          npm run preview
 
-      - name: Upload Artifacts
-        uses: actions/upload-pages-artifact@v3
-        with:
-          # this should match the `pages` option in your adapter-static options
-          path: '.'
 
   deploy:
     needs: build_site
@@ -43,8 +38,3 @@ jobs:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-
-    steps:
-      - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v3
