--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,19 +20,31 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
+      - name: build
         env:
           BASE_PATH: ''
         run: |
           npm run build
 
+      - name: Upload Artifacts
+        uses: actions/upload-pages-artifact@v1
+        # with:
+        #   # this should match the `pages` option in your adapter-static options
+        #   path: '.svelte-kit/output/prerendered/pages'
+
   deploy:
     needs: build_site
     runs-on: ubuntu-latest
+
+    permissions:
+      pages: write
+      id-token: write
+
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
     steps:
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          deploy_key: ${{ secrets.ACCESS_TOKEN }}
-          publish_dir: ./
-          publish_branch: gh-pages\
+      - name: Deploy
+        id: deployment
+        uses: actions/deploy-pages@v1
