--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,4 @@ jobs:
           npm run build
 
       - name: Deploy to GitHub Pages
-        run: rsync -av --delete ./.svelte-kit/output/ $GITHUB_WORKSPACE/
-
-        
-      # 아래에 필요한 설정을 추가하여 GitHub Pages에 배포하는 등의 작업을 수행할 수 있습니다.
+        run: rsync -av --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
