--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
           npm run build
 
       - name: Deploy to GitHub Pages
-        run: rsync -av --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
+        run: rsync -av -ignore-missing-args --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
