--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,36 @@
+# name: Deploy
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Install rsync
+#         run: sudo apt-get install -y rsync
+
+#       - name: Install Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#           cache: npm
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Build
+#         run: |
+#           npm run build
+
+#       - name: Deploy to GitHub Pages
+#         run: rsync -av -ignore-missing-args --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
+
 name: Deploy
 
 on:
@@ -25,8 +58,19 @@ jobs:
         run: npm ci
 
       - name: Build
+        run: npm run build
+
+      - name: Move built files to gh-pages branch
         run: |
-          npm run build
+          git checkout -b gh-pages
+          git add -f .svelte-kit/output/
+          git commit -m "Deploy SvelteKit to gh-pages branch"
+          git push -f origin gh-pages
+          git checkout main
 
       - name: Deploy to GitHub Pages
-        run: rsync -av -ignore-missing-args --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: .svelte-kit/output
+          publish_branch: gh-pages
