--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,58 @@
 #       - name: Deploy to GitHub Pages
 #         run: rsync -av -ignore-missing-args --delete .svelte-kit/output/ $GITHUB_WORKSPACE/
 
-name: Deploy
+# name: Deploy
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - name: Set up Git
+#         run: |
+#           git config --global user.email "cpprhtn@naver.com"
+#           git config --global user.name "cpprhtn"
+#           git config --global push.default matching
+
+#       - name: Checkout repository
+#         uses: actions/checkout@v2
+
+#       - name: Install rsync
+#         run: sudo apt-get install -y rsync
+
+#       - name: Install Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+#           cache: npm
+
+#       - name: Install dependencies
+#         run: npm ci
+
+#       - name: Build
+#         run: npm run build
+
+#       - name: Move built files to gh-pages branch
+#         run: |
+#           git checkout -b gh-pages
+#           git add -f .svelte-kit/output/
+#           git commit -m "Deploy SvelteKit to gh-pages branch"
+#           git push -f origin gh-pages
+#           git checkout main
+
+#       - name: Deploy to GitHub Pages
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: .svelte-kit/output
+#           publish_branch: gh-pages
+
+
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -39,7 +90,7 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git
@@ -47,18 +98,14 @@ jobs:
           git config --global user.email "cpprhtn@naver.com"
           git config --global user.name "cpprhtn"
           git config --global push.default matching
-          
+
       - name: Checkout repository
         uses: actions/checkout@v2
-
-      - name: Install rsync
-        run: sudo apt-get install -y rsync
 
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
-          cache: npm
+          node-version: 14
 
       - name: Install dependencies
         run: npm ci
