Deploy SvelteKit to gh-pages branch

--- a/.svelte-kit/output/client/.vite/manifest.json
+++ b/.svelte-kit/output/client/.vite/manifest.json
@@ -7,7 +7,7 @@
       ".svelte-kit/generated/client-optimized/nodes/3.js",
       ".svelte-kit/generated/client-optimized/nodes/4.js"
     ],
-    "file": "_app/immutable/entry/app.9xCCJqR3.js",
+    "file": "_app/immutable/entry/app.dX7EzMSA.js",
     "imports": [
       "_scheduler.tdcquOLB.js",
       "_index.O1SQKQIw.js"
@@ -29,9 +29,9 @@
       "_app/immutable/assets/jetbrains-mono-latin-wght-normal.AI7HGr_Q.woff2"
     ],
     "css": [
-      "_app/immutable/assets/0.1tOnxdto.css"
+      "_app/immutable/assets/0.TOhhgauX.css"
     ],
-    "file": "_app/immutable/nodes/0.61GHIika.js",
+    "file": "_app/immutable/nodes/0.PUScN-aJ.js",
     "imports": [
       "_scheduler.tdcquOLB.js",
       "_index.O1SQKQIw.js"
@@ -44,11 +44,11 @@
     "css": [
       "_app/immutable/assets/1.XsIJZhal.css"
     ],
-    "file": "_app/immutable/nodes/1.xkXTDG82.js",
+    "file": "_app/immutable/nodes/1.5iq-2d_B.js",
     "imports": [
       "_scheduler.tdcquOLB.js",
       "_index.O1SQKQIw.js",
-      "_singletons.vdkpq2xV.js"
+      "_singletons.5hxBYJhp.js"
     ],
     "isDynamicEntry": true,
     "isEntry": true,
@@ -56,9 +56,9 @@
   },
   ".svelte-kit/generated/client-optimized/nodes/2.js": {
     "css": [
-      "_app/immutable/assets/2.LL_6rrDK.css"
+      "_app/immutable/assets/2.PaUQVfEr.css"
     ],
-    "file": "_app/immutable/nodes/2.sd_q1xxK.js",
+    "file": "_app/immutable/nodes/2.DA2Tn5R9.js",
     "imports": [
       "_scheduler.tdcquOLB.js",
       "_index.O1SQKQIw.js"
@@ -102,8 +102,8 @@
   "_scheduler.tdcquOLB.js": {
     "file": "_app/immutable/chunks/scheduler.tdcquOLB.js"
   },
-  "_singletons.vdkpq2xV.js": {
-    "file": "_app/immutable/chunks/singletons.vdkpq2xV.js",
+  "_singletons.5hxBYJhp.js": {
+    "file": "_app/immutable/chunks/singletons.5hxBYJhp.js",
     "imports": [
       "_scheduler.tdcquOLB.js"
     ]
@@ -149,10 +149,10 @@
     "src": "node_modules/@fontsource-variable/manrope/files/manrope-vietnamese-wght-normal.woff2"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/entry/start.IVsSYfGd.js",
+    "file": "_app/immutable/entry/start.a0_x6wj1.js",
     "imports": [
       "_scheduler.tdcquOLB.js",
-      "_singletons.vdkpq2xV.js"
+      "_singletons.5hxBYJhp.js"
     ],
     "isEntry": true,
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js"
